--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,11 @@
 
 #title{
     background-color: #ff4c68;
+    color: #fff;
 }
 
 body{
-    font-family: 'Montserrat', sans-serif;
+    font-family: "Montserrat";
     font-family: 'Ubuntu', sans-serif;
 }
 
@@ -16,4 +17,26 @@ h1{
 
 .container-fluid{
     padding: 3% 15%;
+}
+
+/* Navigation Bar  */
+
+.navbar{
+    padding: 0 0 4.5rem;
+}
+
+.navbar-brand{
+    font-family:"Ubuntu";
+    font-size: 2.5rem;
+    font-weight: bold;
+
+}
+
+.nav-item{
+    padding: 0 18px;
+}
+
+.nav-link{
+    font-size: 1.2rem;
+    font-family: 'Montserrat-Light';
 }
