resize title img

--- a/css/styles.css
+++ b/css/styles.css
@@ -40,3 +40,11 @@ h1{
     font-size: 1.2rem;
     font-family: 'Montserrat-Light';
 }
+
+.download-button{
+    margin: 5% 3% 5%;
+}
+
+.title-img{
+    width: 60%;
+}
