--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,12 @@ h1{
     line-height: 1.5;
 }
 
+h2{
+    font-family:"Montserrat-Bold";
+    font-size: 3rem;
+    line-height: 1.5;
+}
+
 h3{
     font-family: "Montserrat-Bold";
 }
@@ -76,4 +82,32 @@ p{
 
 .icon:hover{
     color: #ff4c68;
+}
+
+/* Testimonials */
+
+#testimonials{
+    padding: 7% 15%;
+    text-align: center;
+    background-color: #ef8172;
+    color: #fff;
+}
+
+.testimonials-img{
+    width: 20%;
+    border-radius: 100%;
+    margin: 20px;
+}
+
+/* Press  */
+
+#press{
+    background-color: #ef8172;
+    text-align: center;
+    padding-bottom: 3%;
+}
+
+.press-logo{
+    width: 15%;
+    margin: 20px 20px 15px;
 }
