--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ p{
 
 .carousel-item{
     padding: 7% 15%;
-    
+
 }
 
 /* Press  */
@@ -115,4 +115,15 @@ p{
 .press-logo{
     width: 15%;
     margin: 20px 20px 15px;
+}
+
+/* Pricing Section  */
+
+#pricing{
+    padding: 100px;
+    text-align: center;
+}
+
+.pricing-column{
+    padding: 3% 2%;
 }
