--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,8 @@ p{
 }
 
 .container-fluid{
-    padding: 3% 15%;
+    padding: 3% 15% 7%;
+   
 }
 
 /* Navigation Bar  */
@@ -60,14 +61,19 @@ p{
 }
 
 .title-img{
-    width: 60%;
+    width: 18%;
     transform: rotate(25deg);
+    position: absolute;
+    right: 30%;
 }
 
 /* Features */
 
 #features{
     padding: 7% 15%;
+    background-color: #fff;
+    position: relative;
+    z-index: 1;
 }
 
 .features-box{
