--- a/css/styles.css
+++ b/css/styles.css
@@ -61,10 +61,14 @@ p{
 }
 
 .title-img{
-    width: 18%;
+    width: 400px;
     transform: rotate(25deg);
     position: absolute;
     right: 30%;
+}
+
+.custom-img{
+    height: 500px;
 }
 
 /* Features */
