--- a/css/styles.css
+++ b/css/styles.css
@@ -147,3 +147,30 @@ p{
 .pricing-column{
     padding: 3% 2%;
 }
+
+/* CTA Section  */
+
+#cta{
+    background-color: #ff4c68;
+    text-align: center;
+    color: #fff;
+    padding: 7% 15%;
+}
+
+.cta-heading{
+    font-family:"Montserrat-Black";
+    font-size: 3.5rem;
+    line-height: 1.5;
+}
+
+/* Footer  */
+
+#footer{
+    text-align: center;
+    padding: 7% 15%;
+}
+
+.social-icon{
+    margin: 20px 10px;
+    
+}
